Minor edit to tex file

--- a/Project 2/report/Project2.tex
+++ b/Project 2/report/Project2.tex
@@ -38,7 +38,7 @@
 \pagestyle{fancyplain}
 \lhead{\fancyplain{}{\hmwkAuthor \\ \hmwkEmail}}
 \chead{\fancyplain{}{\textbf{\hmwkTitle}}}
-\rhead{\fancyplain{}{\hmwkClass\hmwkSection \\ Due:\ \hmwkDueDate}}
+\rhead{\fancyplain{}{\hmwkClass \\ Due:\ \hmwkDueDate}}
 \lfoot{}
 \cfoot{}
 \rfoot{Page\ \thepage\ of\ \pageref{LastPage}}
@@ -65,7 +65,6 @@
 \hmwkAuthor \\
 \hmwkEmail \\
 \ifthenelse{\equal{\hmwkCollaborators}{}}{}{Collaborators: \hmwkCollaborators\\}
-\ifthenelse{\equal{\hmwkSection}{}}{}{Section \hmwkSection\\}
 Due: \hmwkDueDate\\
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
